# jde

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  discord.nix  install.nix  shell.nix  telebar.nix
dwm/: .gitignore  config.h  dwm.c
emacs/: emacs.nix
gcloud/: google-cloud.nix
polyblocks/: Cargo.toml  default.nix
polyblocks/polyblocks/: Cargo.toml  Config.toml
polyblocks/polyblocks/src/: main.rs
polyblocks/polyblocks/src/lib/: blocks.rs  cli.rs  mod.rs  server.rs
polyblocks/polylib/: Cargo.toml
polyblocks/polylib/src/: lib.rs
polyblocks/polyscripts/: Cargo.toml
polyblocks/polyscripts/src/: lib.rs
scripts/: Makefile  README.md  default.nix
scripts/src/: battery  dot  dotadd  dotpush  easytime  fr  ith  logmeout  logout  ns  pbc  wallpaper
telebar/: Cargo.toml  Makefile  README.md  config.mk  default.nix  test_cleanup.sh
telebar/examples/: Config.toml  config.sh  update_battery.sh
telebar/functional_tests/: .rustc_info.json  Config.toml  config.sh  lib.sh  main.sh
telebar/src/: cli.rs  errors.rs  lib.rs  server.rs  signals.rs
telebar/tests/: config_cli.rs  config_default.rs  config_env_var.rs  config_error.rs  socket_path.rs  xdg_error.rs
window-manager/: README.md  config.h  config.mk  default.nix  dwm.c  shell.nix
