[package]
name = "polyblocks"
version = "0.1.0"
authors = ["Joshua Hoeflich <josh@joshuahoeflich.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "net", "uds", "stream", "io-util", "process", "time"] }
clap  = "2.33"
colored = "2.0"
toml = "0.5.6"
x11rb = "0.6.0"
futures = "0.3"
